Prepared all the other card JSON files. Finished CardRegistry. Added the needed @JsonProperty and @JsonCreator annotations where needed. Added toString methods to the cards for debugging purposes.